added span id to user-text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,8 @@ h2 {
 h3 {
     font-size: 1.5em;
     letter-spacing: 0.25em;
-    text-align: left:
+    text-align: left;
+    color: #eae8e8;
 }
 
 .container {
