--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,20 @@ h1 {
 }
 
 h1,
-h2 {
+h2,
+h4 {
     margin-top: 8px;
     color: #eae8e8;
 }
 
 h3 {
     font-size: 1.5em;
+    letter-spacing: 0.25em;
+    text-align: left;
+    color: #eae8e8;
+}
+
+h4 {
     letter-spacing: 0.25em;
     text-align: left;
     color: #eae8e8;
